--- a/oof/index.html
+++ b/oof/index.html
@@ -8,6 +8,7 @@
     /* display: flex; */
     background-color: aqua;
     width: 20%;
+    padding: 20px;                                                                               
 ">
         What's your name?<br>
         <input type="text" name="name"><br>
